--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, user-scalable=1"
     />
 
-    <title>PADO</title>
+    <title>파도</title>
     <meta name="description" content="시대기물연구소 〈파도〉의 설명글" />
 
     <meta itemprop="name" content="PADO" />
@@ -173,8 +173,8 @@
               <br />
 
               Yongsan-gu, Seoul
-              <br />
-              <a href="mailto:mail@sansuhwa.com">mail@sansuhwa.com</a>
+              <br /><br />
+              <a href="mailto:sansuhwatea@naver.com">sansuhwatea@naver.com</a>
               <br />
 
               +82 2 749 3138
@@ -210,7 +210,7 @@
             </a>
           </div>
 
-          <div class="header__menutoggle__lang language__item visible de">
+          <!-- <div class="header__menutoggle__lang language__item visible de">
             <span class="language--active">
               <a href="#" hreflang="ko"> KO </a>
             </span>
@@ -218,7 +218,7 @@
             <span>
               <a href="#" hreflang="en"> EN </a>
             </span>
-          </div>
+          </div> -->
 
           <div class="menu__item pages">
             <div class="pages__item">
@@ -236,15 +236,15 @@
                 <a href="./legal-notice/"> Legal Notice </a>
               </div>
 
-              <div class="pages__item">
+              <!-- <div class="pages__item">
                 <a href="./privacy-policy/"> Privacy Policy </a>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
       </div>
       <main id="swup" class="transition-fade">
-        <div id="atlas__header" class="page__header">
+        <div id="mapping__header" class="page__header">
           <a href="" class="projectlink__url url--inactive">
             <div class="projecttitle__number"></div>
 
@@ -253,26 +253,26 @@
             </div>
           </a>
 
-          <div class="atlas__sort">
+          <div class="mapping__sort">
             <div
-              class="atlas__sort__button atlas__sort--random sort--active"
+              class="mapping__sort__button mapping__sort--random sort--active"
               data-sort="random"
             >
-              Randomly
+              randomly
             </div>
             <div
-              class="atlas__sort__button atlas__sort--chronological sort--inactive"
+              class="mapping__sort__button mapping__sort--chronological sort--inactive"
               data-sort="default"
             >
-              In Order
+              in order
             </div>
           </div>
         </div>
 
         <!-- contents -->
-        <div id="atlas">
+        <div id="mapping">
           <div
-            class="mix atlas__item"
+            class="mix mapping__item"
             data-project="3"
             data-link="./cafegory/3/"
             data-dominantcolor-hex="#ffffff"
@@ -282,12 +282,12 @@
                 <div class="item__link__wrapper">
                   <a
                     href="./category/3/"
-                    class="atlas__item__link disabled"
+                    class="mapping__item__link disabled"
                     target="_self"
                     rel="noopener noreferrer"
                   >
                     <img
-                      src="https://ik.imagekit.io/11195/sansuhwa/public/3-1-1.jpg?tr=w-200"
+                      src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-cjh-c02_1_1.jpg?tr=w-200"
                       srcset=""
                       data-srcset=""
                       data-sizes="auto"
@@ -311,7 +311,7 @@
             </div>
           </div>
           <div
-            class="mix atlas__item"
+            class="mix mapping__item"
             data-project="3"
             data-link="./cafegory/3/"
             data-dominantcolor-hex="#ff00ff"
@@ -321,12 +321,12 @@
                 <div class="item__link__wrapper">
                   <a
                     href="./category/3/"
-                    class="atlas__item__link disabled"
+                    class="mapping__item__link disabled"
                     target="_self"
                     rel="noopener noreferrer"
                   >
                     <img
-                      src="https://ik.imagekit.io/11195/sansuhwa/public/3-1-1.jpg?tr=w-200"
+                      src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-cjh-c02_1_1.jpg?tr=w-200"
                       srcset=""
                       data-srcset=""
                       data-sizes="auto"
@@ -351,7 +351,7 @@
           </div>
 
           <div
-            class="mix atlas__item"
+            class="mix mapping__item"
             data-project="3"
             data-link="./cafegory/3/"
             data-dominantcolor-hex="#ffffff"
@@ -361,12 +361,12 @@
                 <div class="item__link__wrapper">
                   <a
                     href="./category/3/"
-                    class="atlas__item__link disabled"
+                    class="mapping__item__link disabled"
                     target="_self"
                     rel="noopener noreferrer"
                   >
                     <img
-                      src="https://ik.imagekit.io/11195/sansuhwa/public/3-1-1.jpg?tr=w-200"
+                      src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-cjh-c02_1_1.jpg?tr=w-200"
                       srcset=""
                       data-srcset=""
                       data-sizes="auto"
@@ -391,7 +391,7 @@
           </div>
 
           <div
-            class="mix atlas__item"
+            class="mix mapping__item"
             data-project="3"
             data-link="./cafegory/3/"
             data-dominantcolor-hex="#ffffff"
@@ -401,12 +401,12 @@
                 <div class="item__link__wrapper">
                   <a
                     href="./category/3/"
-                    class="atlas__item__link disabled"
+                    class="mapping__item__link disabled"
                     target="_self"
                     rel="noopener noreferrer"
                   >
                     <img
-                      src="https://ik.imagekit.io/11195/sansuhwa/public/3-1-1.jpg?tr=w-200"
+                      src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-cjh-c02_1_1.jpg?tr=w-200"
                       srcset=""
                       data-srcset=""
                       data-sizes="auto"
@@ -431,7 +431,7 @@
           </div>
 
           <div
-            class="mix atlas__item"
+            class="mix mapping__item"
             data-project="3"
             data-link="./cafegory/3/"
             data-dominantcolor-hex="#ffffff"
@@ -441,12 +441,12 @@
                 <div class="item__link__wrapper">
                   <a
                     href="./category/3/"
-                    class="atlas__item__link disabled"
+                    class="mapping__item__link disabled"
                     target="_self"
                     rel="noopener noreferrer"
                   >
                     <img
-                      src="https://ik.imagekit.io/11195/sansuhwa/public/3-1-1.jpg?tr=w-200"
+                      src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-cjh-c02_1_1.jpg?tr=w-200"
                       srcset=""
                       data-srcset=""
                       data-sizes="auto"
@@ -471,7 +471,7 @@
           </div>
 
           <div
-            class="mix atlas__item"
+            class="mix mapping__item"
             data-project="2"
             data-link="./cafegory/2/"
             data-dominantcolor-hex="#ffffff"
@@ -481,7 +481,7 @@
                 <div class="item__link__wrapper">
                   <a
                     href="./category/2/"
-                    class="atlas__item__link disabled"
+                    class="mapping__item__link disabled"
                     target="_self"
                     rel="noopener noreferrer"
                   >
@@ -511,7 +511,7 @@
           </div>
 
           <div
-            class="mix atlas__item"
+            class="mix mapping__item"
             data-project="2"
             data-link="./cafegory/2/"
             data-dominantcolor-hex="#ffffff"
@@ -521,7 +521,7 @@
                 <div class="item__link__wrapper">
                   <a
                     href="./category/2/"
-                    class="atlas__item__link disabled"
+                    class="mapping__item__link disabled"
                     target="_self"
                     rel="noopener noreferrer"
                   >
@@ -551,7 +551,7 @@
           </div>
 
           <div
-            class="mix atlas__item"
+            class="mix mapping__item"
             data-project="2"
             data-link="./cafegory/2/"
             data-dominantcolor-hex="#ffffff"
@@ -561,7 +561,7 @@
                 <div class="item__link__wrapper">
                   <a
                     href="./category/2/"
-                    class="atlas__item__link disabled"
+                    class="mapping__item__link disabled"
                     target="_self"
                     rel="noopener noreferrer"
                   >
@@ -591,7 +591,7 @@
           </div>
 
           <div
-            class="mix atlas__item"
+            class="mix mapping__item"
             data-project="2"
             data-link="./cafegory/2/"
             data-dominantcolor-hex="#ffffff"
@@ -601,7 +601,7 @@
                 <div class="item__link__wrapper">
                   <a
                     href="./category/2/"
-                    class="atlas__item__link disabled"
+                    class="mapping__item__link disabled"
                     target="_self"
                     rel="noopener noreferrer"
                   >
@@ -631,7 +631,7 @@
           </div>
 
           <div
-            class="mix atlas__item"
+            class="mix mapping__item"
             data-project="2"
             data-link="./cafegory/2/"
             data-dominantcolor-hex="#ffffff"
@@ -641,7 +641,7 @@
                 <div class="item__link__wrapper">
                   <a
                     href="./category/2/"
-                    class="atlas__item__link disabled"
+                    class="mapping__item__link disabled"
                     target="_self"
                     rel="noopener noreferrer"
                   >
@@ -671,7 +671,7 @@
           </div>
 
           <div
-            class="mix atlas__item"
+            class="mix mapping__item"
             data-project="1"
             data-link="./cafegory/1/"
             data-dominantcolor-hex="#ffffff"
@@ -681,7 +681,7 @@
                 <div class="item__link__wrapper">
                   <a
                     href="./category/1/"
-                    class="atlas__item__link disabled"
+                    class="mapping__item__link disabled"
                     target="_self"
                     rel="noopener noreferrer"
                   >
@@ -711,7 +711,7 @@
           </div>
 
           <div
-            class="mix atlas__item"
+            class="mix mapping__item"
             data-project="1"
             data-link="./cafegory/1/"
             data-dominantcolor-hex="#ffffff"
@@ -721,7 +721,7 @@
                 <div class="item__link__wrapper">
                   <a
                     href="./category/1/"
-                    class="atlas__item__link disabled"
+                    class="mapping__item__link disabled"
                     target="_self"
                     rel="noopener noreferrer"
                   >
@@ -751,7 +751,7 @@
           </div>
 
           <div
-            class="mix atlas__item"
+            class="mix mapping__item"
             data-project="1"
             data-link="./cafegory/1/"
             data-dominantcolor-hex="#ffffff"
@@ -761,7 +761,7 @@
                 <div class="item__link__wrapper">
                   <a
                     href="./category/1/"
-                    class="atlas__item__link disabled"
+                    class="mapping__item__link disabled"
                     target="_self"
                     rel="noopener noreferrer"
                   >
@@ -791,7 +791,7 @@
           </div>
 
           <div
-            class="mix atlas__item"
+            class="mix mapping__item"
             data-project="1"
             data-link="./cafegory/1/"
             data-dominantcolor-hex="#ffffff"
@@ -801,7 +801,7 @@
                 <div class="item__link__wrapper">
                   <a
                     href="./category/1/"
-                    class="atlas__item__link disabled"
+                    class="mapping__item__link disabled"
                     target="_self"
                     rel="noopener noreferrer"
                   >
@@ -831,7 +831,7 @@
           </div>
 
           <div
-            class="mix atlas__item"
+            class="mix mapping__item"
             data-project="1"
             data-link="./cafegory/1/"
             data-dominantcolor-hex="#ffffff"
@@ -841,7 +841,7 @@
                 <div class="item__link__wrapper">
                   <a
                     href="./category/1/"
-                    class="atlas__item__link disabled"
+                    class="mapping__item__link disabled"
                     target="_self"
                     rel="noopener noreferrer"
                   >
@@ -884,8 +884,6 @@
 
     <script src="./assets/js/main-attr.js"></script>
 
-    <script>
- 
-    </script>
+    <script></script>
   </body>
 </html>
