--- a/legal-notice/index.html
+++ b/legal-notice/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, user-scalable=1"
     />
 
-    <title>PADO legal notice</title>
+    <title>파도 • Notice</title>
     <meta name="description" content="시대기물연구소 〈파도〉의 설명글" />
 
     <meta itemprop="name" content="PADO" />
@@ -165,8 +165,8 @@
               <br />
 
               Yongsan-gu, Seoul
-              <br />
-              <a href="mailto:mail@sansuhwa.com">mail@sansuhwa.com</a>
+              <br /><br />
+              <a href="mailto:sansuhwatea@naver.com">sansuhwatea@naver.com</a>
               <br />
 
               +82 2 749 3138
@@ -202,7 +202,7 @@
             </a>
           </div>
 
-          <div class="header__menutoggle__lang language__item visible de">
+          <!-- <div class="header__menutoggle__lang language__item visible de">
             <span class="language--active">
               <a href="./" hreflang="ko"> KO </a>
             </span>
@@ -210,7 +210,7 @@
             <span>
               <a href="../" hreflang="en"> EN </a>
             </span>
-          </div>
+          </div> -->
 
           <div class="menu__item pages">
             <div class="pages__item">
@@ -228,9 +228,9 @@
                 <a href="../legal-notice/"> Legal Notice </a>
               </div>
 
-              <div class="pages__item">
+              <!-- <div class="pages__item">
                 <a href="../privacy-policy/"> Privacy Policy </a>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -238,11 +238,7 @@
       <main id="swup" class="transition-fade" data-swup="1">
         <div id="general__header" class="page__header">
           <div class="page__title">
-            <a
-              href="https://stadelmannwoessner.com/en"
-              target="_self"
-              rel="noopener noreferrer"
-            >
+            <a href="" target="_self" rel="noopener noreferrer">
               Legal Notice
             </a>
           </div>
@@ -251,55 +247,43 @@
         <div id="general" class="legal-notice">
           <div class="general__wrapper" style="height: 80vh; opacity: 1">
             <p>
-              Sansuhwa Teahouse*PADO<br />
+              파도, PADO / 21-14, Hannam-daero 20gil,<br />Yongsan-gu, Seoul
+              <br />
 
-              21-14, Hannam-daero 20gil,<br />
-              Yongsan-gu, Seoul<br />
-              Tel: +82 2 749 3138<br />
-              mail@sansuhwa.com
+              +82 2 749 3138
+            </p>
+
+            <h1>Copyright</h1>
+            <p>
+              웹사이트 내부 콘텐츠의 무단 복사, 사용 또는 변경은 허용되지
+              않습니다. 모든 텍스트, 이미지 또는 멀티미디어 데이터는 저작권법 및
+              지적 재산권 보호법의 적용을 받습니다. 이에 대한 추가 사용을
+              위해서는 권리 소유자 또는 아티스트의 명시적인 허가가 필요합니다.
+            </p>
+
+            <p>
+              Unauthorized copying, use or alteration of the content of the
+              website is not permitted. All texts, pictures or multimedia data
+              are subject to copyright laws and laws for the protection of
+              intellectual property. Further use requires the explicit
+              permission by the holder of rights, the gallery or the artists.
+            </p>
+
+            <h1>External links</h1>
+            <p>
+              〈PADO〉는 웹사이트 외부에 링크된 외부 웹사이트의 콘텐츠에 대해
+              책임을 지지 않으며 링크된 사이트의 현재 또는 미래의 디자인에
+              어떠한 영향도 미치지 않습니다. 따라서 〈PADO〉는 해당 사이트에
+              대한 링크가 설정된 이후에 이루어진 콘텐츠의 변경에 대해 책임을
+              지지 않습니다.
             </p>
             <p>
-              Sansuhwa Teahouse*PADO<br />
-
-              21-14, Hannam-daero 20gil,<br />
-              Yongsan-gu, Seoul<br />
-              Tel: +82 2 749 3138<br />
-              mail@sansuhwa.com
+              〈PADO〉 is not responsible for the contents of linked external
+              websites outside the website and has no influence whatsoever on
+              the current or future design of the linked sites. 〈PADO〉 hereby
+              distances itself from any alterations to the content that were
+              made after the links to those sites were set up.
             </p>
-            <p>
-              Sansuhwa Teahouse*PADO<br />
-
-              21-14, Hannam-daero 20gil,<br />
-              Yongsan-gu, Seoul<br />
-              Tel: +82 2 749 3138<br />
-              mail@sansuhwa.com
-            </p>
-            <p>
-              Sansuhwa Teahouse*PADO<br />
-
-              21-14, Hannam-daero 20gil,<br />
-              Yongsan-gu, Seoul<br />
-              Tel: +82 2 749 3138<br />
-              mail@sansuhwa.com
-            </p>
-            <p>
-              Sansuhwa Teahouse*PADO<br />
-
-              21-14, Hannam-daero 20gil,<br />
-              Yongsan-gu, Seoul<br />
-              Tel: +82 2 749 3138<br />
-              mail@sansuhwa.com
-            </p>
-            <p>Sansuhwa Teahouse Shop Link:</p>
-            <p>
-              <a
-                href="https://www.sansuhwa.com"
-                target="_blank"
-                rel="noopener noreferrer"
-                >https://www.sansuhwa.com</a
-              >
-            </p>
-           
           </div>
         </div>
       </main>
