--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, user-scalable=1"
     />
 
-    <title>PADO legal notice</title>
+    <title>파도 legal notice</title>
     <meta name="description" content="시대기물연구소 〈파도〉의 설명글" />
 
     <meta itemprop="name" content="PADO" />
@@ -165,8 +165,8 @@
               <br />
 
               Yongsan-gu, Seoul
-              <br />
-              <a href="mailto:mail@sansuhwa.com">mail@sansuhwa.com</a>
+              <br /><br />
+              <a href="mailto:sansuhwatea@naver.com">sansuhwatea@naver.com</a>
               <br />
 
               +82 2 749 3138
@@ -202,7 +202,7 @@
             </a>
           </div>
 
-          <div class="header__menutoggle__lang language__item visible de">
+          <!-- <div class="header__menutoggle__lang language__item visible de">
             <span class="language--active">
               <a href="./" hreflang="ko"> KO </a>
             </span>
@@ -210,7 +210,7 @@
             <span>
               <a href="../" hreflang="en"> EN </a>
             </span>
-          </div>
+          </div> -->
 
           <div class="menu__item pages">
             <div class="pages__item">
@@ -237,11 +237,7 @@
       <main id="swup" class="transition-fade" data-swup="1">
         <div id="general__header" class="page__header">
           <div class="page__title">
-            <a
-              href="https://stadelmannwoessner.com/en"
-              target="_self"
-              rel="noopener noreferrer"
-            >
+            <a href="" target="_self" rel="noopener noreferrer">
               Privacy Policy
             </a>
           </div>
@@ -249,7 +245,9 @@
 
         <div id="general" class="privacy-policy">
           <div class="general__wrapper" style="opacity: 1">
-            <h1>1. Data Protection</h1>
+            <h2>준비 중입니다.</h2>
+
+            <!-- <h1>1. Data Protection</h1>
             <h2>General information</h2>
             <p>
               The following information provides a simple overview of what
@@ -296,35 +294,8 @@
               also have the right to lodge a complaint with the competent
               supervisory authority. You can contact us at any time if you have
               further questions on the subject of data protection.
-            </p>
-            <h1>2. Hosting</h1>
-            <h2>Externes Hosting</h2>
-            <p>
-              This website is hosted by an external service provider (hoster).
-              The personal data collected on this website is stored on the
-              hoster's servers. This may include IP addresses, contact requests,
-              meta and communication data, contract data, contact details,
-              names, website accesses and other data generated via a website.
-            </p>
-            <p>
-              The hoster is used for the purpose of fulfilling the contract with
-              our potential and existing customers (Art. 6 para. 1 lit. b GDPR)
-              and in the interest of a secure, fast and efficient provision of
-              our online offer by a professional provider (Art. 6 para. 1 lit. f
-              GDPR).
-            </p>
-            <p>
-              Our hoster will only process your data to the extent necessary to
-              fulfill its performance obligations and follow our instructions
-              with regard to this data. We use the following hoster:
-            </p>
-            <p>
-              domain.com Group AB<br />
-              domain 3<br />
-              rest
-            </p>
-            <h1>3 General notes and mandatory information</h1>
-            <h2>...</h2>
+            </p> -->
+
             <!-- 
 <p>
 Die Betreiber dieser Seiten nehmen den Schutz Ihrer persönlichen
