--- a/information/index.html
+++ b/information/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, user-scalable=1"
     />
 
-    <title>PADO Information</title>
+    <title>파도 • Info</title>
     <meta name="description" content="시대기물연구소 〈파도〉의 설명글" />
 
     <meta itemprop="name" content="PADO" />
@@ -165,8 +165,8 @@
               <br />
 
               Yongsan-gu, Seoul
-              <br />
-              <a href="mailto:mail@sansuhwa.com">mail@sansuhwa.com</a>
+              <br /><br />
+              <a href="mailto:sansuhwatea@naver.com">sansuhwatea@naver.com</a>
               <br />
 
               +82 2 749 3138
@@ -202,7 +202,7 @@
             </a>
           </div>
 
-          <div class="header__menutoggle__lang language__item visible de">
+          <!-- <div class="header__menutoggle__lang language__item visible de">
             <span class="language--active">
               <a href="./" hreflang="ko"> KO </a>
             </span>
@@ -210,7 +210,7 @@
             <span>
               <a href="../en" hreflang="en"> EN </a>
             </span>
-          </div>
+          </div> -->
 
           <div class="menu__item pages">
             <div class="pages__item">
@@ -226,9 +226,9 @@
                 <a href="../legal-notice/"> Legal Notice </a>
               </div>
 
-              <div class="pages__item">
+              <!-- <div class="pages__item">
                 <a href="../privacy-policy/"> Privacy Policy </a>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -255,32 +255,37 @@
         <div id="information">
           <div class="information__item information__text">
             <p>
-              Art is most often presented to the public in the form of artworks
-              or performances, so the processes that precede and follow its
-              creation are often obscured or end up as ‘art of the moment’, such
-              as exhibitions and performances. Archives can shed light on the
-              rich context of art in this respect and help it reach a wider
-              audience beyond the moment.
+              전통의 깊은 토대 위에 우리가 살고 있는 이 시대의 이야기를 담고자
+              합니다. 계속해서 ‘왜’라는 질문을 던지고 나만의 답을 찾아갑니다.
+              이를 통해 새로운 기물을 만들고 제안합니다. 처음에는 혼자서
+              두드리는 낯선 노이즈로 여길 수도 있지만, 점차 사람들에게 전달하여
+              음을 가지는 소리가 되고, 그 파장이 올바른 방향을 가지고 나아가
+              마침내 우리는 변화하게 됩니다.
             </p>
             <p>
-              Archives are a great space and tool for preserving and passing on
-              the content and context of these cultures to future generations.
-              In recent years, they've gone beyond just preserving culture, and
-              have taken many directions, such as content creation, to tell
-              people in the present where culture began and ended.
+              새로운 기물의 제안으로 우리는 다양한 각도에서 답을 찾아가고,
+              사용자에게 기물에 대한 생각을 확장시키게 하여 이를 통해 사물을
+              바라보는 새로운 관점을 전달하고자 합니다. 우리는 다양한 이 시대의
+              기물들을 연구하고 저마다의 답을 찾아갑니다.
             </p>
             <p>
-              These spaces are open to anyone and can be accessed from anywhere,
-              and while there may not be much to see or read in the immediate
-              future, in the long run they contain information and knowledge
-              that is meaningful beyond mere records.
+              때로는 실패하고, 때로는 성공할 것입니다. 어떤 기물이 복제와
+              모방으로 남게 되어 십 년, 이십 년, 삼십 년이 지나고 백년이 지나
+              마침내 ’시대의 기물’로 남을지 지금의 우리로서는 알 수 없습니다.
+            </p>
+            <p>
+              실생활의 변화는 새로운 기물을 탄생시키고 새로운 도구의 제안으로
+              사용하는 행위에도 변화가 일어납니다. 깊은 사유의 끝에 그만의
+              이야기를 담는 작가님들과 함께 연구하며, 애정을 담아 기꺼이 우리의
+              이야기를 듣고 경험하는 분들이 만들어 일으켜주시는 바람으로 우리는
+              멀리 수 천 수 만 킬로미터를 나아갈 수 있는 파도가 되고자 합니다.
             </p>
           </div>
 
           <div class="information__cv__wapper">
             <div class="information__item information__cv cv--left">
               <div class="cv__item">
-                <p class="cv__item__header">1-1</p>
+                <p class="cv__item__header">1-1 새로운 차의 맛</p>
                 <p class="cv__item__header">김종훈 | 조장현 | 홍우경</p>
 
                 <div class="cv__item__text">
@@ -313,32 +318,34 @@
 
             <div class="information__item information__cv cv--right">
               <div class="cv__item">
-                <p class="cv__item__header">1-1</p>
-                <p class="cv__item__header">김종훈 | 조장현 | 홍우경</p>
+                <p class="cv__item__header">1-1 New flavors of tea</p>
+                <p class="cv__item__header">
+                  Kim Joong-Hoon | Cho Jang-Hyun | Hong Woo-Kyung
+                </p>
 
                 <div class="cv__item__text">
                   <p>
-                    우리는 차를 마십니다. 늘 쓰던 도구를 사용하며 차를 우립니다.
-                    이전부터 차를 우려오던 방법에 익숙하고 늘 같은 형식의 다기를
-                    만들고 그 다기를 사용하여 차를 우립니다.
+                    We drink tea. We use the same tools we've always used to
+                    make tea. We're familiar with the way we've always brewed
+                    tea, and we've always made the same type of teaware and used
+                    the same type of teaware to brew tea.
                   </p>
                   <p>
-                    오랜 역사동안 차를 만드는 방법과 차를 마시는 방법은
-                    변화해왔습니다. 여러 변화의 끝에 하나의 굵은 흐름들이
-                    생겨나고 당대에는 차와 물을 함께 넣고 끓여 마시는
-                    자다법(煮茶法)이, 송나라 시대에는 고운 가루차로 만들어
-                    휘저어 마시는 점다법(點茶法)이, 명나라 시기에는 끓는 물을
-                    잎차에 부어 우려 마시는 포다법(泡茶法)이 유행했습니다.
+                    Throughout history, the way we make tea and the way we drink
+                    it has changed, and after all the changes, Bold stream has
+                    emerged, In the Tang Dynasty, tea and water were combined
+                    and boiled together; in the Song Dynasty, fine powdered tea
+                    was made and stirred; and in the Ming Dynasty, boiling water
+                    was poured over leaf tea and steeped.
                   </p>
                   <p>
-                    우리는 과거의 모든 방법으로 차를 마실 수도, 새로운 방법으로
-                    차를 마실수도 있습니다. 이번 『1-1 새로운 차의 맛』 전시를
-                    통해 과거의 표현방식에 질문을 하고 답을 찾아가는 과정에서
-                    작가는 엄격한 자기검열보다 실험성을 담은 새로운 다기를
-                    고민하고 제안합니다. 도구가 달라지면 그 도구를 사용하는
-                    우리의 생각에도 물리적 확장이 일어나며 행위에도 변화가
-                    일어납니다. 새로운 차도구를 통해 새로운 차의 맛이
-                    만들어집니다.
+                    We can drink tea in all the old ways or in new ways. In this
+                    exhibition, 『1-1 New flavors of tea』, the artist questions
+                    and answers the past ways of expression and proposes a new
+                    tea ceremony that embraces experimentation rather than
+                    strict self-censorship. As our tools change, there is a
+                    physical expansion in our thoughts and behaviors as we use
+                    them. New tools create new flavors of tea.
                   </p>
                 </div>
               </div>
@@ -352,15 +359,12 @@
               <div class="more__item__text">
                 <p>
                   Sansuhwa Teahouse<br />
-                  Jung Hye-Joo<br />
-
-                  <a href="./">mail@sansuhwa.com</a><br />
-                  +2 000 0000
+                  Jung Hye-Joo
                 </p>
               </div>
             </div>
 
-            <div class="more__item">
+            <!-- <div class="more__item">
               <p class="more__item__header">Team</p>
 
               <div class="more__item__text">
@@ -369,9 +373,31 @@
                   • • • • •
                 </p>
               </div>
-            </div>
+            </div> -->
 
             <div class="more__item">
+              <p class="more__item__header">Teahouse</p>
+
+              <div class="more__item__text">
+                <p>
+                  Good tea comes from good mountains [山-san]， Good tea is
+                  brewed with good water [水-su], So its taste and flavor are in
+                  harmony [和-hwa]， And become the most delicious cup of tea
+                  [茶-cha].<br /><br />
+                </p>
+                <p>
+                  Sansuhwa Teahouse is a specialist tea brand that offers a wide
+                  range of tea, teaware and tea-related experiences. Our tea
+                  room and store is located in Hannam-dong where guests are
+                  welcome to sit and enjoy the teas and also purchase some. Tea
+                  and tea-related workshops are also offered here. We also
+                  opened our gallery space 'Night & Day' in 2020, where tea,
+                  craft and art exhibitions are hosted.
+                </p>
+              </div>
+            </div>
+
+            <!-- <div class="more__item">
               <p class="more__item__header">Text</p>
 
               <div class="more__item__text">
@@ -386,26 +412,9 @@
                   mollit anim id est laborum.
                 </p>
               </div>
-            </div>
+            </div> -->
 
-            <div class="more__item">
-              <p class="more__item__header">Text</p>
-
-              <div class="more__item__text">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
-                </p>
-              </div>
-            </div>
-
-            <div class="more__item">
+            <!-- <div class="more__item">
               <p class="more__item__header">text</p>
 
               <div class="more__item__text">
@@ -420,88 +429,35 @@
                   mollit anim id est laborum.
                 </p>
               </div>
-            </div>
-
-            <div class="more__item">
-              <p class="more__item__header">text</p>
-
-              <div class="more__item__text">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
-                </p>
-              </div>
-            </div>
-
-            <div class="more__item">
-              <p class="more__item__header">text</p>
-
-              <div class="more__item__text">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
-                </p>
-              </div>
-            </div>
-
-            <div class="more__item">
-              <p class="more__item__header">pp</p>
-
-              <div class="more__item__text">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum. Lorem ipsum dolor sit amet,
-                  consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                  ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                  ea commodo consequat. Duis aute irure dolor in reprehenderit
-                  in voluptate velit esse cillum dolore eu fugiat nulla
-                  pariatur. Excepteur sint occaecat cupidatat non proident, sunt
-                  in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-              </div>
-            </div>
+            </div> -->
           </div>
 
           <div class="information__item information__more more--right">
             <div class="more__item">
-              <p class="more__item__header">text</p>
+              <p class="more__item__header">*Sansuhwa Shop:</p>
 
               <div class="more__item__text">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum. Lorem ipsum dolor sit amet,
-                  consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                  ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                  ea commodo consequat. Duis aute irure dolor in reprehenderit
-                  in voluptate velit esse cillum dolore eu fugiat nulla
-                  pariatur. Excepteur sint occaecat cupidatat non proident, sunt
-                  in culpa qui officia deserunt mollit anim id est laborum.
+                  <a
+                    href="https://www.sansuhwa.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >sansuhwa.com</a
+                  >
+                </p>
+              </div>
+            </div>
+            <div class="more__item">
+              <p class="more__item__header">*Gallery [BAAT] Archive:</p>
+
+              <div class="more__item__text">
+                <p>
+                  <a
+                    href="https://archive.sansuhwa.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >archive.sansuhwa.com</a
+                  >
                 </p>
               </div>
             </div>
