--- a/information/index.html
+++ b/information/index.html
@@ -243,7 +243,7 @@
 
           <div class="page__title">
             <a
-              href="https://stadelmannwoessner.com"
+              href=""
               target="_self"
               rel="noopener noreferrer"
             >
