--- a/index.html
+++ b/index.html
@@ -192,20 +192,20 @@
             <a href="./category/3/" class="projectlist__item">
               <span class="item--projectnumber">03</span>
               <span class="item--projectname">
-                <p>1-1-03-CJH</p>
+                <p>1-1-CJH</p>
               </span>
             </a>
             <a href="./category/2/" class="projectlist__item">
               <span class="item--projectnumber">02</span>
               <span class="item--projectname">
-                <p>1-1-02-HYG</p>
+                <p>1-1-HWK</p>
               </span>
             </a>
 
             <a href="./category/1/" class="projectlist__item">
               <span class="item--projectnumber">01</span>
               <span class="item--projectname">
-                <p>1-1-01-KJH</p>
+                <p>1-1-KJH</p>
               </span>
             </a>
           </div>
@@ -300,7 +300,7 @@
 
                 <div class="item__text hidden">
                   <span class="item__count">
-                    <span class="item__projectnumber">1-1-03-CJH</span>
+                    <span class="item__projectnumber">1-1-CJH</span>
                     &nbsp;&nbsp;&nbsp;
                     <span class="item__imgnumber">1</span>
                   </span>
@@ -339,7 +339,7 @@
 
                 <div class="item__text hidden">
                   <span class="item__count">
-                    <span class="item__projectnumber">1-1-03-CJH</span>
+                    <span class="item__projectnumber">1-1-CJH</span>
                     &nbsp;&nbsp;&nbsp;
                     <span class="item__imgnumber">2</span>
                   </span>
@@ -379,7 +379,7 @@
 
                 <div class="item__text hidden">
                   <span class="item__count">
-                    <span class="item__projectnumber">1-1-03-CJH</span>
+                    <span class="item__projectnumber">1-1-CJH</span>
                     &nbsp;&nbsp;&nbsp;
                     <span class="item__imgnumber">3</span>
                   </span>
@@ -419,7 +419,7 @@
 
                 <div class="item__text hidden">
                   <span class="item__count">
-                    <span class="item__projectnumber">1-1-03-CJH</span>
+                    <span class="item__projectnumber">1-1-CJH</span>
                     &nbsp;&nbsp;&nbsp;
                     <span class="item__imgnumber">4</span>
                   </span>
@@ -459,7 +459,7 @@
 
                 <div class="item__text hidden">
                   <span class="item__count">
-                    <span class="item__projectnumber">1-1-03-CJH</span>
+                    <span class="item__projectnumber">1-1-CJH</span>
                     &nbsp;&nbsp;&nbsp;
                     <span class="item__imgnumber">5</span>
                   </span>
@@ -499,7 +499,7 @@
 
                 <div class="item__text hidden">
                   <span class="item__count">
-                    <span class="item__projectnumber">1-1-02-HYG</span>
+                    <span class="item__projectnumber">1-1-HWK</span>
                     &nbsp;&nbsp;&nbsp;
                     <span class="item__imgnumber">1</span>
                   </span>
@@ -539,7 +539,7 @@
 
                 <div class="item__text hidden">
                   <span class="item__count">
-                    <span class="item__projectnumber">1-1-02-HYG</span>
+                    <span class="item__projectnumber">1-1-HWK</span>
                     &nbsp;&nbsp;&nbsp;
                     <span class="item__imgnumber">2</span>
                   </span>
@@ -579,7 +579,7 @@
 
                 <div class="item__text hidden">
                   <span class="item__count">
-                    <span class="item__projectnumber">1-1-02-HYG</span>
+                    <span class="item__projectnumber">1-1-HWK</span>
                     &nbsp;&nbsp;&nbsp;
                     <span class="item__imgnumber">3</span>
                   </span>
@@ -619,7 +619,7 @@
 
                 <div class="item__text hidden">
                   <span class="item__count">
-                    <span class="item__projectnumber">1-1-02-HYG</span>
+                    <span class="item__projectnumber">1-1-HWK</span>
                     &nbsp;&nbsp;&nbsp;
                     <span class="item__imgnumber">4</span>
                   </span>
@@ -659,7 +659,7 @@
 
                 <div class="item__text hidden">
                   <span class="item__count">
-                    <span class="item__projectnumber">1-1-02-HYG</span>
+                    <span class="item__projectnumber">1-1-HWK</span>
                     &nbsp;&nbsp;&nbsp;
                     <span class="item__imgnumber">5</span>
                   </span>
@@ -699,7 +699,7 @@
 
                 <div class="item__text hidden">
                   <span class="item__count">
-                    <span class="item__projectnumber">1-1-01-KJH</span>
+                    <span class="item__projectnumber">1-1-KJH</span>
                     &nbsp;&nbsp;&nbsp;
                     <span class="item__imgnumber">1</span>
                   </span>
@@ -739,7 +739,7 @@
 
                 <div class="item__text hidden">
                   <span class="item__count">
-                    <span class="item__projectnumber">1-1-01-KJH</span>
+                    <span class="item__projectnumber">1-1-KJH</span>
                     &nbsp;&nbsp;&nbsp;
                     <span class="item__imgnumber">2</span>
                   </span>
@@ -779,7 +779,7 @@
 
                 <div class="item__text hidden">
                   <span class="item__count">
-                    <span class="item__projectnumber">1-1-01-KJH</span>
+                    <span class="item__projectnumber">1-1-KJH</span>
                     &nbsp;&nbsp;&nbsp;
                     <span class="item__imgnumber">3</span>
                   </span>
@@ -819,7 +819,7 @@
 
                 <div class="item__text hidden">
                   <span class="item__count">
-                    <span class="item__projectnumber">1-1-01-KJH</span>
+                    <span class="item__projectnumber">1-1-KJH</span>
                     &nbsp;&nbsp;&nbsp;
                     <span class="item__imgnumber">4</span>
                   </span>
@@ -859,7 +859,7 @@
 
                 <div class="item__text hidden">
                   <span class="item__count">
-                    <span class="item__projectnumber">1-1-01-KJH</span>
+                    <span class="item__projectnumber">1-1-KJH</span>
                     &nbsp;&nbsp;&nbsp;
                     <span class="item__imgnumber">5</span>
                   </span>
