--- a/information/index.html
+++ b/information/index.html
@@ -7,11 +7,17 @@
       content="width=device-width, initial-scale=1, user-scalable=1"
     />
 
-    <title>파도 • Info</title>
-    <meta name="description" content="시대기물연구소 〈파도〉의 설명글" />
+    <title>시대기물연구소 파도 • Info</title>
+    <meta
+      name="description"
+      content="시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의 이야기를 담는 기물을 연구하고 제안합니다."
+    />
 
     <meta itemprop="name" content="PADO" />
-    <meta name="keywords" content="PADO, 시대기물연구소, 파도" />
+    <meta
+      name="keywords"
+      content="PADO, 시대기물연구소, 파도, 새로운 기물, 기물, 다기, 다구, 차도구"
+    />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- favicon -->
@@ -46,14 +52,20 @@
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:site_name" content="GYEON" />
     <meta property="og:title" content="GYEON" />
-    <meta property="og:description" content="PARK, JEONG GYEON" />
+    <meta
+      property="og:description"
+      content="시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의 이야기를 담는 기물을 연구하고 제안합니다."
+    />
     <meta property="og:image" content="../assets/favicon/og-image.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="GYEON" />
-    <meta name="twitter:description" content="PARK, JEONG GYEON" />
+    <meta
+      name="twitter:description"
+      content="시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의 이야기를 담는 기물을 연구하고 제안합니다."
+    />
     <meta name="twitter:image" content="../assets/favicon/og-image.jpg" />
 
     <!-- web-app-image -->
@@ -174,30 +186,56 @@
           </div>
 
           <div class="menu__item projectlist">
-            <!-- <a href="../category/4/" class="projectlist__item">
-              <span class="item--projectnumber">04</span>
-              <span class="item--projectname">
-                <p>PA-1-2-000</p>
-              </span>
-            </a> -->
-
-            <a href="../category/3/" class="projectlist__item">
+            <a href="../newflavorsoftea/1-1-cjh-c/" class="projectlist__item">
               <span class="item--projectnumber">03</span>
               <span class="item--projectname">
-                <p>1-1-03-CJH</p>
-              </span>
-            </a>
-            <a href="../category/2/" class="projectlist__item">
-              <span class="item--projectnumber">02</span>
-              <span class="item--projectname">
-                <p>1-1-02-HYG</p>
+                <p>1-1-cjh-C</p>
               </span>
             </a>
 
-            <a href="../category/1/" class="projectlist__item">
+            <a href="../newflavorsoftea/1-1-cjh-p/" class="projectlist__item">
+              <span class="item--projectnumber">03</span>
+              <span class="item--projectname">
+                <p>1-1-cjh-P</p>
+              </span>
+            </a>
+
+            <a href="../newflavorsoftea/1-1-cjh-t/" class="projectlist__item">
+              <span class="item--projectnumber">03</span>
+              <span class="item--projectname">
+                <p>1-1-cjh-T</p>
+              </span>
+            </a>
+
+            <a href="../newflavorsoftea/1-1-hwk-c/" class="projectlist__item">
+              <span class="item--projectnumber">02</span>
+              <span class="item--projectname">
+                <p>1-1-hwk-C</p>
+              </span>
+            </a>
+            <a href="../newflavorsoftea/1-1-hwk-p/" class="projectlist__item">
+              <span class="item--projectnumber">02</span>
+              <span class="item--projectname">
+                <p>1-1-hwk-P</p>
+              </span>
+            </a>
+
+            <a href="../newflavorsoftea/1-1-kjh-c/" class="projectlist__item">
               <span class="item--projectnumber">01</span>
               <span class="item--projectname">
-                <p>1-1-01-KJH</p>
+                <p>1-1-kjh-C</p>
+              </span>
+            </a>
+            <a href="../newflavorsoftea/1-1-kjh-p/" class="projectlist__item">
+              <span class="item--projectnumber">01</span>
+              <span class="item--projectname">
+                <p>1-1-kjh-P</p>
+              </span>
+            </a>
+            <a href="../newflavorsoftea/1-1-kjh-t/" class="projectlist__item">
+              <span class="item--projectnumber">01</span>
+              <span class="item--projectname">
+                <p>1-1-kjh-T</p>
               </span>
             </a>
           </div>
@@ -242,11 +280,7 @@
           </div>
 
           <div class="page__title">
-            <a
-              href=""
-              target="_self"
-              rel="noopener noreferrer"
-            >
+            <a href="" target="_self" rel="noopener noreferrer">
               Information
             </a>
           </div>
@@ -255,30 +289,19 @@
         <div id="information">
           <div class="information__item information__text">
             <p>
-              전통의 깊은 토대 위에 우리가 살고 있는 이 시대의 이야기를 담고자
-              합니다. 계속해서 ‘왜’라는 질문을 던지고 나만의 답을 찾아갑니다.
-              이를 통해 새로운 기물을 만들고 제안합니다. 처음에는 혼자서
-              두드리는 낯선 노이즈로 여길 수도 있지만, 점차 사람들에게 전달하여
-              음을 가지는 소리가 되고, 그 파장이 올바른 방향을 가지고 나아가
-              마침내 우리는 변화하게 됩니다.
+              시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의
+              이야기를 담는 기물을 연구하고 제안합니다. 새로운 도구의 제안으로
+              사람들이 도구를 사용하는 행위에도 변화가 일어날 것입니다. 이러한
+              제안들은 처음에는 혼자서 두드리는 미약한 노이즈로 여겨질 수도
+              있습니다. 하지만 점차 사람들에게 전달되어 정확한 음을 가지는
+              소리가 되고, 그 파장이 올바른 방향으로 나아가 우리의 생각을
+              확장시키고 마침내 사물을 바라보는 관점을 바꿀 것입니다.
             </p>
             <p>
-              새로운 기물의 제안으로 우리는 다양한 각도에서 답을 찾아가고,
-              사용자에게 기물에 대한 생각을 확장시키게 하여 이를 통해 사물을
-              바라보는 새로운 관점을 전달하고자 합니다. 우리는 다양한 이 시대의
-              기물들을 연구하고 저마다의 답을 찾아갑니다.
-            </p>
-            <p>
-              때로는 실패하고, 때로는 성공할 것입니다. 어떤 기물이 복제와
-              모방으로 남게 되어 십 년, 이십 년, 삼십 년이 지나고 백년이 지나
-              마침내 ’시대의 기물’로 남을지 지금의 우리로서는 알 수 없습니다.
-            </p>
-            <p>
-              실생활의 변화는 새로운 기물을 탄생시키고 새로운 도구의 제안으로
-              사용하는 행위에도 변화가 일어납니다. 깊은 사유의 끝에 그만의
-              이야기를 담는 작가님들과 함께 연구하며, 애정을 담아 기꺼이 우리의
-              이야기를 듣고 경험하는 분들이 만들어 일으켜주시는 바람으로 우리는
-              멀리 수 천 수 만 킬로미터를 나아갈 수 있는 파도가 되고자 합니다.
+              옛 전통과 실생활에 대한 깊은 사유를 기물에 담아내는 작가님들과
+              함께 연구하며, 애정을 담아 기꺼이 우리의 이야기를 듣고 경험하는
+              분들이 일으켜주시는 바람으로 우리는 멀리 수 천 수 만 킬로미터를
+              나아갈 수 있는 파도가 되고자 합니다.
             </p>
           </div>
 
@@ -348,6 +371,15 @@
                     them. New tools create new flavors of tea.
                   </p>
                 </div>
+
+                <figure>
+                  <img
+                    src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-poster-2.jpg"
+                  />
+                  <img
+                    src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-poster-1.jpg"
+                  />
+                </figure>
               </div>
             </div>
           </div>
@@ -380,9 +412,9 @@
 
               <div class="more__item__text">
                 <p>
-                  Good tea comes from good mountains [山-san]， Good tea is
+                  Good tea comes from good mountains [山-san], Good tea is
                   brewed with good water [水-su], So its taste and flavor are in
-                  harmony [和-hwa]， And become the most delicious cup of tea
+                  harmony [和-hwa], And become the most delicious cup of tea
                   [茶-cha].<br /><br />
                 </p>
                 <p>
@@ -391,7 +423,7 @@
                   room and store is located in Hannam-dong where guests are
                   welcome to sit and enjoy the teas and also purchase some. Tea
                   and tea-related workshops are also offered here. We also
-                  opened our gallery space 'Night & Day' in 2020, where tea,
+                  opened our gallery space “Night & Day” in 2020, where tea,
                   craft and art exhibitions are hosted.
                 </p>
               </div>
