--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <meta property="og:url" content="https://pado.sansuhwa.com" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="ko_KR" />
-    <meta property="og:site_name" content="GYEON" />
-    <meta property="og:title" content="GYEON" />
+    <meta property="og:site_name" content="PADO" />
+    <meta property="og:title" content="PADO" />
     <meta
       property="og:description"
       content="시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의 이야기를 담는 기물을 연구하고 제안합니다."
@@ -61,7 +61,7 @@
     <meta property="og:image:height" content="630" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="GYEON" />
+    <meta name="twitter:title" content="PADO" />
     <meta
       name="twitter:description"
       content="시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의 이야기를 담는 기물을 연구하고 제안합니다."
