--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -7,11 +7,17 @@
       content="width=device-width, initial-scale=1, user-scalable=1"
     />
 
-    <title>파도 legal notice</title>
-    <meta name="description" content="시대기물연구소 〈파도〉의 설명글" />
+    <title>시대기물연구소 파도 legal notice</title>
+    <meta
+      name="description"
+      content="시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의 이야기를 담는 기물을 연구하고 제안합니다."
+    />
 
     <meta itemprop="name" content="PADO" />
-    <meta name="keywords" content="PADO, 시대기물연구소, 파도" />
+    <meta
+      name="keywords"
+      content="PADO, 시대기물연구소, 파도, 새로운 기물, 기물, 다기, 다구, 차도구"
+    />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- favicon -->
@@ -44,16 +50,22 @@
     <meta property="og:url" content="https://pado.sansuhwa.com" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="ko_KR" />
-    <meta property="og:site_name" content="GYEON" />
-    <meta property="og:title" content="GYEON" />
-    <meta property="og:description" content="PARK, JEONG GYEON" />
+    <meta property="og:site_name" content="PADO" />
+    <meta property="og:title" content="PADO" />
+    <meta
+      property="og:description"
+      content="시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의 이야기를 담는 기물을 연구하고 제안합니다."
+    />
     <meta property="og:image" content="../assets/favicon/og-image.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="GYEON" />
-    <meta name="twitter:description" content="PARK, JEONG GYEON" />
+    <meta name="twitter:title" content="PADO" />
+    <meta
+      name="twitter:description"
+      content="시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의 이야기를 담는 기물을 연구하고 제안합니다."
+    />
     <meta name="twitter:image" content="../assets/favicon/og-image.jpg" />
 
     <!-- web-app-image -->
@@ -174,30 +186,56 @@
           </div>
 
           <div class="menu__item projectlist">
-            <!-- <a href="../category/4/" class="projectlist__item">
-<span class="item--projectnumber">04</span>
-<span class="item--projectname">
-<p>PA-1-2-000</p>
-</span>
-</a> -->
-
-            <a href="../category/3/" class="projectlist__item">
+            <a href="../newflavorsoftea/1-1-cjh-c/" class="projectlist__item">
               <span class="item--projectnumber">03</span>
               <span class="item--projectname">
-                <p>1-1-03-CJH</p>
-              </span>
-            </a>
-            <a href="../category/2/" class="projectlist__item">
-              <span class="item--projectnumber">02</span>
-              <span class="item--projectname">
-                <p>1-1-02-HYG</p>
+                <p>1-1-cjh-C</p>
               </span>
             </a>
 
-            <a href="../category/1/" class="projectlist__item">
+            <a href="../newflavorsoftea/1-1-cjh-p/" class="projectlist__item">
+              <span class="item--projectnumber">03</span>
+              <span class="item--projectname">
+                <p>1-1-cjh-P</p>
+              </span>
+            </a>
+
+            <a href="../newflavorsoftea/1-1-cjh-t/" class="projectlist__item">
+              <span class="item--projectnumber">03</span>
+              <span class="item--projectname">
+                <p>1-1-cjh-T</p>
+              </span>
+            </a>
+
+            <a href="../newflavorsoftea/1-1-hwk-c/" class="projectlist__item">
+              <span class="item--projectnumber">02</span>
+              <span class="item--projectname">
+                <p>1-1-hwk-C</p>
+              </span>
+            </a>
+            <a href="../newflavorsoftea/1-1-hwk-p/" class="projectlist__item">
+              <span class="item--projectnumber">02</span>
+              <span class="item--projectname">
+                <p>1-1-hwk-P</p>
+              </span>
+            </a>
+
+            <a href="../newflavorsoftea/1-1-kjh-c/" class="projectlist__item">
               <span class="item--projectnumber">01</span>
               <span class="item--projectname">
-                <p>1-1-01-KJH</p>
+                <p>1-1-kjh-C</p>
+              </span>
+            </a>
+            <a href="../newflavorsoftea/1-1-kjh-p/" class="projectlist__item">
+              <span class="item--projectnumber">01</span>
+              <span class="item--projectname">
+                <p>1-1-kjh-P</p>
+              </span>
+            </a>
+            <a href="../newflavorsoftea/1-1-kjh-t/" class="projectlist__item">
+              <span class="item--projectnumber">01</span>
+              <span class="item--projectname">
+                <p>1-1-kjh-T</p>
               </span>
             </a>
           </div>
